[package]
name = "py-marshal"
version = "0.1.0"
authors = ["Solomon Ucko <solly.ucko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
num-traits = "0.2"
num-derive = "0.3"
num-bigint = "0.2"
num-complex = "0.2"
