[package]
name = "py-marshal"
version = "0.1.0"
authors = ["Solomon Ucko <solly.ucko@gmail.com>"]
edition = "2018"
description = "A Rust port of https://github.com/python/cpython/blob/master/Python/marshal.c"
license = "MIT"
repository = "https://github.com/sollyucko/py-marshal"
readme = "README.md"
categories = ["emulators", "encoding", "parser-implementations", "parsing"]
keywords = ["python", "marshal", "read", "decode"]

[dependencies]
bitflags = "1"
num-traits = "0.2"
num-derive = "0.3"
num-bigint = "0.2"
num-complex = "0.2"
error-chain = "0.12"
